[gd_scene load_steps=5 format=3 uid="uid://bjlifhwwfo2ta"]

[ext_resource type="Script" path="res://Josh_Test_Scenes/world.gd" id="1_6igo1"]
[ext_resource type="PackedScene" uid="uid://x0tek8t1bewj" path="res://CPU_and_Player/Player.tscn" id="2_lorrs"]
[ext_resource type="PackedScene" uid="uid://hj83ai4o2o5m" path="res://debug_screen/Back_to_Debug_Menu.tscn" id="3_a50rb"]
[ext_resource type="PackedScene" uid="uid://cebcnc652bypc" path="res://main_menu/main_menu_back_button.tscn" id="4_pf7yt"]

[node name="World" type="Node2D"]
position = Vector2(238, 140)
script = ExtResource("1_6igo1")
player_scene = ExtResource("2_lorrs")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Host" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.362
anchor_top = 0.448
anchor_right = 0.729
anchor_bottom = 0.667
offset_left = 0.23999
offset_top = 0.0399933
offset_right = 0.0799866
offset_bottom = -0.0900116
theme_override_font_sizes/font_size = 60
text = "Host"

[node name="Join" type="Button" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.773
anchor_top = 0.822
anchor_right = 0.908
anchor_bottom = 0.937
offset_left = -0.0400391
offset_top = 0.0599976
offset_right = 0.159973
offset_bottom = 0.00999451
theme_override_font_sizes/font_size = 60
text = "Join"

[node name="LineEdit" type="LineEdit" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.358
anchor_top = 0.733
anchor_right = 0.735
anchor_bottom = 0.956
offset_left = 0.159988
offset_top = 0.0899963
offset_right = 0.199982
offset_bottom = -0.119995
theme_override_font_sizes/font_size = 60
placeholder_text = "Enter Ip:"
clear_button_enabled = true

[node name="Start" type="Button" parent="CanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.033
anchor_top = 0.789
anchor_right = 0.335
anchor_bottom = 0.952
offset_left = 0.16
offset_top = -0.030014
offset_right = 0.199997
offset_bottom = -0.0400085
theme_override_font_sizes/font_size = 60
text = "Start Game"

[node name="LineEdit2" type="LineEdit" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 0.354
anchor_top = 0.17
anchor_right = 0.723
anchor_bottom = 0.285
offset_left = 0.0800018
offset_top = 0.0999985
offset_right = -0.0400391
offset_bottom = 0.0499954
theme_override_font_sizes/font_size = 60
placeholder_text = "Name"

[node name="Container" type="Container" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -44.0
offset_right = 104.0
offset_bottom = 61.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Container"]
layout_mode = 2

[node name="Heres_Your_IP" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = -1
anchor_left = 0.282
anchor_top = 0.624
anchor_right = 0.791
anchor_bottom = 0.831
offset_left = -4.88
offset_top = -5.84009
offset_right = -543.44
offset_bottom = -153.96
scale = Vector2(1.402, 1.534)
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 76
text = "Heres The LAN IP We found! :]"
horizontal_alignment = 1

[node name="BackToDebugMenu" parent="." instance=ExtResource("3_a50rb")]
visible = false
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 149.0
offset_top = -129.0
offset_right = 237.0
offset_bottom = -94.0
grow_horizontal = 1
grow_vertical = 1

[node name="Main Menu Back Button" parent="." instance=ExtResource("4_pf7yt")]
offset_left = -182.0
offset_top = -55.0
offset_right = 565.0
offset_bottom = 55.0

[connection signal="pressed" from="CanvasLayer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CanvasLayer/Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="CanvasLayer/Start" to="." method="_on_start_pressed"]
